slight tweaks to layout of a couple of cards to ensure the text remains visible

--- a/copi.owasp.org/assets/css/app.scss
+++ b/copi.owasp.org/assets/css/app.scss
@@ -602,13 +602,13 @@ $wildcard-color: #fccd8f;
       background: no-repeat top/100% url("../static/images/eop-cards/information-disclosure-7.png");
     }
     &.n8 {
-      background: no-repeat top/100% url("../static/images/eop-cards/information-disclosure-8.png");
+      background: no-repeat top 15px left/100% url("../static/images/eop-cards/information-disclosure-8.png");
     }
     &.n9 {
       background: no-repeat center/100% url("../static/images/eop-cards/information-disclosure-9.png");
     }
     &.n10 {
-      background: no-repeat top 24px left/100% url("../static/images/eop-cards/information-disclosure-10.png");
+      background: no-repeat top 28px left/100% url("../static/images/eop-cards/information-disclosure-10.png");
     }
     &.nJ {
       background: no-repeat center/100% url("../static/images/eop-cards/information-disclosure-j.png");
